objects/App_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>AmendOpportunity_AccountFieldSetup__c</fullName>
        <label>AmendOpportunity-Account Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmendOpportunity_OriginalOppFieldSetup__c</fullName>
        <label>AmendOpportunity-Orig. Opp. Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmendQuote_AccountFieldSetup__c</fullName>
        <label>AmendQuote-Account Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmendQuote_OriginalOppFieldSetup__c</fullName>
        <label>AmendQuote-Orig. Opp. Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmendQuote_OriginalQuoteFieldSetup__c</fullName>
        <label>AmendQuote-Orig. Quote Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Select_Master_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Select Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_New_Amendment_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate New Amendment Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_New_Renewal_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate New Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain_QuoteLine_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain QuoteLine Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain_QuoteLine_Groups_for_Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain QuoteLine Groups for Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain_QuoteLine_Groups_for_renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain QuoteLine Groups for renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Quote_Fields_Setup__c</fullName>
        <label>New Quote Fields Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalOpportunity_AccountFieldSetup__c</fullName>
        <label>RenewalOpportunity-Account Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalOpportunity_OriginalOppFieldSetup__c</fullName>
        <label>RenewalOpportunity-Orig.Opp. Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalQuote_AccountFieldSetup__c</fullName>
        <label>RenewalQuote-Account Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalQuote_OriginalOppFieldSetup__c</fullName>
        <label>RenewalQuote-Orig. Opp. Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RenewalQuote_OriginalQuoteFieldSetup__c</fullName>
        <label>RenewalQuote-Orig. Quote Field Setup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>